finally position colecting is working

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -65,9 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "id": "1fe5694c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# дата старту набору позиції\n",
@@ -82,6 +84,7 @@
     "        self.qty = 0\n",
     "        self.avg_price = 0\n",
     "        self.volume_pot = 0\n",
+    "        self.need = positionValue\n",
     "\n",
     "    \n",
     "    def add(self,amount, price):\n",
@@ -90,7 +93,7 @@
     "        self.market_value += val\n",
     "        self.avg_price = self.market_value/self.qty\n",
     "\n",
-    "         \n",
+    "    \n",
     "    def is_full(self):\n",
     "        return self.market_value >=StockBalance.positionValue\n",
     "    \n",
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -170,38 +173,7 @@
      "output_type": "stream",
      "text": [
       "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n"
+      "[*********************100%***********************]  1 of 1 completed"
      ]
     }
    ],
@@ -259,6 +231,7 @@
     "    wdf['VolumePoten']=0\n",
     "    wdf['MarketValue']=0\n",
     "    wdf['Profit']=0\n",
+    "    wdf['test']=\"\"\n",
     "    wdf['StopPrice']=0\n",
     "    wdf['TargetPrice']=0\n",
     "    wdf['Ticker']=symbol\n",
@@ -286,46 +259,38 @@
     "                if row[\"Close\"]>price_filter: # if price for opening is bigger than limit - please skip it\n",
     "                    continue\n",
     "\n",
-    "                # open position\n",
+    "                # YES we find signal day\n",
     "                openPosStatus = True  # there is signal \n",
-    "                \n",
     "                wdf.at[index,'openPosStatus']= openPosStatus # record status in dataframe\n",
-    "#                 PriceOpen = row['Close']  # record close price as price of open\n",
-    "#                 wdf.at[index,'OpenPrice']= PriceOpen\n",
-    "#                 StopPrice = PriceOpen-(PriceOpen*StopLoss*-1) # setting stop-loss\n",
-    "#                 TPPrice = PriceOpen+(PriceOpen*ExitAfter)  # set target price\n",
     "                status=1\n",
     "                \n",
     "                # volume size block\n",
     "                \n",
-    "        # \n",
-    "               \n",
-    "        \n",
+    "        # the next day after signal appear we check condition in order to open position\n",
     "        if (status ==0) & (openPosStatus == True) & (mystock.is_full()==False):\n",
     "            #\n",
-    "            mid_price = (row['Close']+row['Open'])/2 # take avg.price for position\n",
-    "            if mid_price ==0:\n",
-    "                mid_price = row['Close']\n",
-    "\n",
-    "            # calc how many stocks you need\n",
-    "            need_cap = positionValue - mystock.market_value # how much capital we need\n",
-    "           \n",
-    "            if ((mid_price * row['VolumePoten']) >need_cap) & (mystock.is_full()==False) : # if potensial suit our demand\n",
-    "                amount = need_cap/mid_price\n",
-    "                mystock.add(amount, mid_price)\n",
-    "\n",
-    "            if ((mid_price * row['VolumePoten'])) < need_cap & (mystock.is_full()==False): # if there is no stock count for us\n",
-    "                #print('mid_price < need_cap', mid_price)\n",
-    "                mystock.add(wdf.at[index,'VolumePoten'], mid_price)\n",
-    "\n",
-    "\n",
     "            \n",
+    "            # calc how many money we need to collect\n",
+    "            # how much capital we need\n",
+    "            \n",
+    "            need_cap = positionValue - mystock.market_value \n",
+    "            mid_price = (row['Close']+row['Open'])/2 # take avg.price for position\n",
+    "            \n",
+    "            if need_cap >=0:\n",
+    "                if (mid_price * wdf.at[index,'VolumePoten']) >= need_cap: # if potensial suit our demand\n",
+    "                    size = need_cap/mid_price\n",
+    "                    mystock.add(size, mid_price)\n",
+    "                    \n",
+    "                else: \n",
+    "                    \n",
+    "                    amount = wdf.at[index,'VolumePoten']\n",
+    "                    mystock.add(amount, mid_price)\n",
+    "            \n",
+    "            # record MarketValue\n",
     "            wdf.at[index,'MarketValue']= mystock.market_value\n",
     "            \n",
     "        if mystock.is_full()==True: # position is full we waiting for close signal\n",
     "            openPosStatus == False\n",
-    "            \n",
-    "            \n",
     "            \n",
     "    #     # working with first opened position\n",
     "        if (PriceOpen >0) & (status==0):\n",
@@ -401,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -411,7 +376,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -449,28 +414,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "4c9ad6a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10000"
+       "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "positionValue\n"
+    "mystock.market_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
@@ -488,8 +453,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "f627b623",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LPTX'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mystock.ticker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "350f9783-928e-4521-a360-bb671808cfb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mystock.avg_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb2b6d55-745e-4f7e-b9c6-56f42e84c5dd",
    "metadata": {},
    "outputs": [],
    "source": []
