add close position def

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -44,6 +44,8 @@
     "positionValue = 10000   # the sum you need to collect\n",
     "openPosStatus = False \n",
     "volume_potensial =0 \n",
+    "close_signal = 1          # 1 = 100% growth, 2 = growth to $1 price, 3 = hold position for 1 month, 4 = after achieving 100% growth, close when price falls below SMA5\n",
+    "\n",
     "\n"
    ]
   },
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
    "id": "1fe5694c",
    "metadata": {
     "tags": []
@@ -80,18 +82,20 @@
     "    def __init__(self, ticker):\n",
     "        self.ticker = ticker\n",
     "        self.market_value = 0\n",
-    "        self.end_date = 0\n",
+    "        self.date_end_pos = 0 # last date when we collect stock\n",
     "        self.qty = 0\n",
     "        self.avg_price = 0\n",
     "        self.volume_pot = 0\n",
     "        self.need = positionValue\n",
+    "        \n",
     "\n",
     "    \n",
-    "    def add(self,amount, price):\n",
+    "    def add(self,amount, price, posdate):\n",
     "        self.qty += amount\n",
     "        val=price*amount\n",
     "        self.market_value += val\n",
     "        self.avg_price = self.market_value/self.qty\n",
+    "        self.date_end_pos = posdate\n",
     "\n",
     "    \n",
     "    def is_full(self):\n",
@@ -111,6 +115,16 @@
     "            self.volume_pot = ((abs(close-low)/abs(high-low))*volume)*0.05\n",
     "        if self.volume_pot == 0 :\n",
     "            self.volume_pot = volume*0.05\n",
+    "        \n",
+    "    def isclosesignal(self, nom_of_sig, price, cur_date):\n",
+    "        \n",
+    "        if (nom_of_sig == 1):\n",
+    "            if (self.avg_price*2 < price) & (self.market_value>0):\n",
+    "                return True\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "            \n",
     "        \n",
     "        \n",
     "\n"
@@ -134,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -154,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -164,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -173,7 +187,38 @@
      "output_type": "stream",
      "text": [
       "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed"
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     }
    ],
@@ -230,6 +275,7 @@
     "    wdf['openPosStatus']=False\n",
     "    wdf['VolumePoten']=0\n",
     "    wdf['MarketValue']=0\n",
+    "    wdf['AvgPrice']=0\n",
     "    wdf['Profit']=0\n",
     "    wdf['test']=\"\"\n",
     "    wdf['StopPrice']=0\n",
@@ -279,40 +325,46 @@
     "            if need_cap >=0:\n",
     "                if (mid_price * wdf.at[index,'VolumePoten']) >= need_cap: # if potensial suit our demand\n",
     "                    size = need_cap/mid_price\n",
-    "                    mystock.add(size, mid_price)\n",
+    "                    mystock.add(size, mid_price, index)\n",
     "                    \n",
     "                else: \n",
     "                    \n",
     "                    amount = wdf.at[index,'VolumePoten']\n",
-    "                    mystock.add(amount, mid_price)\n",
+    "                    mystock.add(amount, mid_price, index)\n",
     "            \n",
     "            # record MarketValue\n",
     "            wdf.at[index,'MarketValue']= mystock.market_value\n",
+    "            wdf.at[index,'AvgPrice']= mystock.avg_price\n",
+    "            \n",
     "            \n",
     "        if mystock.is_full()==True: # position is full we waiting for close signal\n",
     "            openPosStatus == False\n",
     "            \n",
     "    #     # working with first opened position\n",
-    "        if (PriceOpen >0) & (status==0):\n",
-    "            wdf.at[index,'OpenPrice']= PriceOpen\n",
-    "            wdf.at[index,'StopPrice']= StopPrice\n",
-    "            wdf.at[index,'TargetPrice']= TPPrice\n",
+    "        if mystock.isclosesignal(close_signal, row['Close'], index) == True:\n",
+    "            wdf.at[index,'Profit']=1000000\n",
+    "            \n",
+    "        \n",
+    "#         if (PriceOpen >0) & (status==0):\n",
+    "#             wdf.at[index,'OpenPrice']= PriceOpen\n",
+    "#             wdf.at[index,'StopPrice']= StopPrice\n",
+    "#             wdf.at[index,'TargetPrice']= TPPrice\n",
     "\n",
     "\n",
-    "            if row['High']>TPPrice:\n",
-    "                wdf.at[index,'Profit']= RiskPertrade*ExitAfter\n",
-    "                PriceOpen =0\n",
-    "                TPPrice=0\n",
-    "                StopPrice=0\n",
-    "                openPosStatus=False\n",
+    "#             if row['High']>TPPrice:\n",
+    "#                 wdf.at[index,'Profit']= RiskPertrade*ExitAfter\n",
+    "#                 PriceOpen =0\n",
+    "#                 TPPrice=0\n",
+    "#                 StopPrice=0\n",
+    "#                 openPosStatus=False\n",
     "                \n",
     "\n",
-    "            if row['Low']<StopPrice:\n",
-    "                wdf.at[index,'Profit']= RiskPertrade*StopLoss\n",
-    "                PriceOpen =0\n",
-    "                TPPrice=0\n",
-    "                StopPrice=0\n",
-    "                openPosStatus=False\n",
+    "#             if row['Low']<StopPrice:\n",
+    "#                 wdf.at[index,'Profit']= RiskPertrade*StopLoss\n",
+    "#                 PriceOpen =0\n",
+    "#                 TPPrice=0\n",
+    "#                 StopPrice=0\n",
+    "#                 openPosStatus=False\n",
     "\n",
     "\n",
     "        status = 0    \n",
@@ -366,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -376,7 +428,7 @@
        "0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -414,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "id": "4c9ad6a9",
    "metadata": {},
    "outputs": [
@@ -424,18 +476,18 @@
        "0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mystock.market_value"
+    "mystock.date_end_pos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
@@ -453,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "id": "f627b623",
    "metadata": {},
    "outputs": [
@@ -463,7 +515,7 @@
        "'LPTX'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "id": "350f9783-928e-4521-a360-bb671808cfb7",
    "metadata": {},
    "outputs": [
@@ -484,7 +536,7 @@
        "0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
