do 3 of 4 signal for closing pos

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 84,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
     "positionValue = 10000   # the sum you need to collect\n",
     "openPosStatus = False \n",
     "volume_potensial =0 \n",
-    "close_signal = 1          # 1 = 100% growth, 2 = growth to $1 price, 3 = hold position for 1 month, 4 = after achieving 100% growth, close when price falls below SMA5\n",
+    "close_signal = 3          # 1 = 100% growth, 2 = growth to $1 price, 3 = hold position for 1 month, 4 = after achieving 100% growth, close when price falls below SMA5\n",
     "\n",
     "\n"
    ]
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "id": "1fe5694c",
    "metadata": {
     "tags": []
@@ -117,10 +117,25 @@
     "            self.volume_pot = volume*0.05\n",
     "        \n",
     "    def isclosesignal(self, nom_of_sig, price, cur_date):\n",
+    "        if self.market_value>0:  # if there is open position\n",
+    "            \n",
+    "            if nom_of_sig == 1:\n",
+    "                if (price > self.avg_price*2):\n",
+    "                    return True\n",
+    "            if nom_of_sig == 2:\n",
+    "                if self.avg_price>1:\n",
+    "                    return True\n",
+    "            if nom_of_sig == 3:\n",
+    "                if (cur_date-self.date_end_pos)> datetime.timedelta(20): \n",
+    "                    return True\n",
+    "                \n",
+    "                    \n",
+    "            \n",
+    "            \n",
+    "        else:\n",
+    "            return False\n",
     "        \n",
-    "        if (nom_of_sig == 1):\n",
-    "            if (self.avg_price*2 < price) & (self.market_value>0):\n",
-    "                return True\n",
+    "            \n",
     "    \n",
     "    \n",
     "    \n",
@@ -148,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 86,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -168,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 87,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -178,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 88,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -418,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -428,7 +443,7 @@
        "0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 90,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -466,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "id": "4c9ad6a9",
    "metadata": {},
    "outputs": [
@@ -476,7 +491,7 @@
        "0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 92,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
@@ -505,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 93,
    "id": "f627b623",
    "metadata": {},
    "outputs": [
@@ -515,7 +530,7 @@
        "'LPTX'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 94,
    "id": "350f9783-928e-4521-a360-bb671808cfb7",
    "metadata": {},
    "outputs": [
@@ -536,7 +551,7 @@
        "0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,8 +562,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "cb2b6d55-745e-4f7e-b9c6-56f42e84c5dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d1 = '2023-01-01'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "625c0e2c-4699-490c-a031-e81cd36fd5e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas._libs.tslibs.timestamps.Timestamp"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(datefromlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "319f9bc7-be6a-480e-9eff-5a12188dab48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(index - datefromlist) > datetime.timedelta(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "f8b839e1-0a08-4a21-a85d-2061698d9b92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2022-08-09 00:00:00')"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f8a09c-dcf5-43fb-bf7b-38539222ebfd",
    "metadata": {},
    "outputs": [],
    "source": []
