finally isclosesignal is completly ready

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 115,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 116,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
     "positionValue = 10000   # the sum you need to collect\n",
     "openPosStatus = False \n",
     "volume_potensial =0 \n",
-    "close_signal = 3          # 1 = 100% growth, 2 = growth to $1 price, 3 = hold position for 1 month, 4 = after achieving 100% growth, close when price falls below SMA5\n",
+    "close_signal = 4       # 1 = 100% growth, 2 = growth to $1 price, 3 = hold position for 1 month, 4 = after achieving 100% growth, close when price falls below SMA5\n",
     "\n",
     "\n"
    ]
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 117,
    "id": "1fe5694c",
    "metadata": {
     "tags": []
@@ -116,7 +116,7 @@
     "        if self.volume_pot == 0 :\n",
     "            self.volume_pot = volume*0.05\n",
     "        \n",
-    "    def isclosesignal(self, nom_of_sig, price, cur_date):\n",
+    "    def isclosesignal(self, nom_of_sig, price, cur_date, smaprice):\n",
     "        if self.market_value>0:  # if there is open position\n",
     "            \n",
     "            if nom_of_sig == 1:\n",
@@ -128,21 +128,13 @@
     "            if nom_of_sig == 3:\n",
     "                if (cur_date-self.date_end_pos)> datetime.timedelta(20): \n",
     "                    return True\n",
-    "                \n",
-    "                    \n",
-    "            \n",
+    "            if nom_of_sig == 4:\n",
+    "                if (price > self.avg_price*2) & (price < smaprice):\n",
+    "                    return True\n",
     "            \n",
     "        else:\n",
     "            return False\n",
-    "        \n",
-    "            \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "\n"
+    "        "
    ]
   },
   {
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 118,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -183,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 119,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -193,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 120,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -278,6 +270,7 @@
     "    # building features in working dataframe\n",
     "    wdf['avgvol']= wdf['Volume'].rolling(window=AvgVolDayLimit, win_type=None).mean()  # середній обєм за 10 днів\n",
     "    wdf['VolRise'] =wdf['Volume']/wdf['avgvol']-1      # building vol signal\n",
+    "    wdf['SMA5']= wdf['Close'].rolling(5).mean()\n",
     "    wdf['PrevClose'] = wdf.Close.shift(1)      # write previous close\n",
     "    wdf['volsignal']=wdf['VolRise']>VolRise            # volume signal column\n",
     "    wdf['GreenCandleSig'] = wdf['Close']>wdf['Open']   # green candle\n",
@@ -356,7 +349,7 @@
     "            openPosStatus == False\n",
     "            \n",
     "    #     # working with first opened position\n",
-    "        if mystock.isclosesignal(close_signal, row['Close'], index) == True:\n",
+    "        if mystock.isclosesignal(close_signal, row['Close'], index, row['SMA5']) == True:\n",
     "            wdf.at[index,'Profit']=1000000\n",
     "            \n",
     "        \n",
@@ -433,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 121,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -443,7 +436,7 @@
        "0"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 122,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -481,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 123,
    "id": "4c9ad6a9",
    "metadata": {},
    "outputs": [
@@ -491,7 +484,7 @@
        "0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 124,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
@@ -520,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 125,
    "id": "f627b623",
    "metadata": {},
    "outputs": [
@@ -530,7 +523,7 @@
        "'LPTX'"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 126,
    "id": "350f9783-928e-4521-a360-bb671808cfb7",
    "metadata": {},
    "outputs": [
@@ -551,7 +544,7 @@
        "0"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 127,
    "id": "cb2b6d55-745e-4f7e-b9c6-56f42e84c5dd",
    "metadata": {},
    "outputs": [],
@@ -572,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 128,
    "id": "625c0e2c-4699-490c-a031-e81cd36fd5e3",
    "metadata": {},
    "outputs": [
@@ -582,7 +575,7 @@
        "pandas._libs.tslibs.timestamps.Timestamp"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 129,
    "id": "319f9bc7-be6a-480e-9eff-5a12188dab48",
    "metadata": {},
    "outputs": [
@@ -603,7 +596,7 @@
        "True"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 130,
    "id": "f8b839e1-0a08-4a21-a85d-2061698d9b92",
    "metadata": {},
    "outputs": [
@@ -624,7 +617,7 @@
        "Timestamp('2022-08-09 00:00:00')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
